@@ -1,3 +1,7 @@
+2003-09-05  John Levon  <levon@movementarian.org>
+
+	* opd_image.c: cleanup of ctx_switch_set_image()
+
 2003-09-05  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* daemon/opd_image.c: After a context switch ensure we update correctly
